Title spacing issues fixed

--- a/src/Assets/scss/components/_c-site-headings.scss
+++ b/src/Assets/scss/components/_c-site-headings.scss
@@ -35,7 +35,7 @@
   &--text-align-center {
     text-align: center;
     width: 100%;
-    margin-bottom: $spacing--small;
+    margin-bottom: $spacing--x-small;
   }
 
   //Large title
@@ -52,7 +52,7 @@
     }
 
     &--sub {
-      @include set-font-size(5rem, 5rem, 5rem, 5rem);
+      @include set-font-size(3.4rem, 5rem, 5rem, 5rem);
       font-family: font-family(nt-primary, medium);
       line-height: 1;
       padding-top: $spacing--small;
